<resources>
    <string name="app_name">LF launcher</string>
    <string name="minecraft">Minecraft</string>
    <string name="version">Version</string>
    <string name="launch">Launch</string>
    <string name="mods_title"> Mods (%d)</string>
    <string name="modules_title"> Modules (%d)</string>
    <string name="no_mods_found">No Mods Found</string>
    <string name="mod_load_order">Load order: %d</string>
    <string name="drag_to_reorder">Drag to reorder</string>
    <string name="mod_reordered">Mod order updated</string>
    <string name="mods_added">Module added successfully</string>
    <string name="about_title">☕ About</string>
    <string name="copyright">©2024–2025 LeviMC. All rights reserved.</string>
    <string name="font_license">This app uses the Misans font.</string>
    <string name="resourcepack_detected_title">Resource Pack Detected</string>
    <string name="resourcepack_detected_message">Do you want to launch the game now?\n\nResource Pack: %s</string>
    <string name="launch_now">Launch Now</string>
    <string name="launch_later">Launch Later</string>
    <string name="import_confirmation_title">Import Mods</string>
    <string name="import_confirmation_message">Are you sure you want to import the selected %d mod files?</string>
    <string name="overwrite_file_title">File Already Exists</string>
    <string name="overwrite_file_message">The file %s already exists. Do you want to overwrite it?</string>
    <string name="overwrite">Overwrite</string>
    <string name="skip">Skip</string>
    <string name="confirm">Confirm</string>
    <string name="installed_packages">Installed Packages</string>
    <string name="local_custom">Local Custom</string>
    <string name="installed_versions">Installed</string>
    <string name="custom_versions">Custom</string>
    <string name="storage_permission_title">Storage Permission Required</string>
    <string name="storage_permission_message">Please grant storage permission to access mods directory and detect mods.</string>
    <string name="grant_permission">Grant</string>
    <string name="cancel">Cancel</string>
    <string name="files_processed">Successfully processed %d mod files</string>
    <string name="files_processing_error">File processing failed: %s</string>
    <string name="user_cancelled">Import cancelled by user</string>
    <string name="error">Error</string>
    <string name="no_install_minecraft">Please install Minecraft first</string>
    <string name="no_minecraft">Exit</string>
    <string name="exit">Exit</string>
    <string name="overlay_permission_message">Please grant the overlay permission</string>
    <string name="overlay_permission_denied_message">Please grant overlay permission, otherwise the log window cannot be displayed.</string>
    <string name="overlay_permission_not_granted">Overlay permission not granted</string>
    <string name="storage_permission_not_granted">Storage permission not granted</string>
    <string name="import_apk">Import APK</string>
    <string name="install">Install</string>
    <string name="version_name">Version name</string>
    <string name="name_invalid">This name cannot be used or is already taken!</string>
    <string name="install_done">Install finished, version: %1$s</string>
    <string name="illegal_apk_title">Illegal APK</string>
    <string name="not_mc_apk">Not a Minecraft APK</string>
    <string name="not_found_version">No version found</string>
    <string name="installing_title">Installing…</string>
    <string name="installing_message">Please wait, installing Minecraft</string>
    <string name="enable_debug_log">Enable Debug Log</string>
    <string name="settings_title">Settings</string>
    <string name="settings_desc">Your launcher settings</string>
    <string name="unknown_sources_permission_title">Install Permission</string>
    <string name="unknown_sources_permission_message">To install or update this app, please grant permission to install unknown apps. Click "Grant" to open system settings, enable the permission for this app, and return to continue.</string>
    <string name="check_update">Check for updates</string>
    <string name="version_prefix">Version: </string>
    <string name="coming_soon">Comming soon</string>
    <string name="coming_soon_desc">This feature is under development and will be available soon</string>
    <string name="ok">OK</string>
    <string name="new_version_found">New version found: %1$s</string>
    <string name="update_question">Do you want to download and install the latest version?</string>
    <string name="download_update">Download Update</string>
    <string name="ignore_this_version">Ignore this version</string>
    <string name="update_progress">Download progress: %1$d%%</string>
    <string name="update_failed">Download failed: %1$s</string>
    <string name="install_failed">Unable to install update: %1$s</string>
    <string name="already_latest_version">Already latest version (%1$s)</string>
    <string name="version_ignored">This version has been ignored</string>
    <string name="downloading_update">Downloading update…</string>
    <string name="repair_libs_in_progress">Repairing game library files…</string>
    <string name="repair_completed">Repair Completed</string>
    <string name="repair_libs_success_message">Game library files have been successfully repaired. You can now launch the game.</string>
    <string name="repair_failed">Repair Failed</string>
    <string name="repair_libs_failed_message">Failed to repair game library files. Please check file integrity.</string>
    <string name="repair_error">Repair Error</string>
    <string name="repair_libs_error_message">An error occurred during repair: %s</string>
    <string name="missing_libs_title">Missing game library files - %s</string>
    <string name="missing_libs_message">Required game library files are missing. Do you want to repair them now?</string>
    <string name="repair">Repair</string>
    <string name="repair_libs_dialog_title">Repairing Game Libraries</string>
    <string name="requires_repair">[Needs Repair]</string>
    <string name="theme_title">Theme Mode</string>
    <string name="theme_follow_system">Follow System</string>
    <string name="theme_light">Force Day Mode</string>
    <string name="theme_dark">Force Night Mode</string>
    <string name="error_no_browser">No browser available</string>
    <string name="eula_title">LeviLauncher License Agreement</string>
    <string name="eula_message"><b>Welcome to LeviLauncher</b>\n\nBy using this software you agree to:\n\n• This is an <b>unofficial</b> Minecraft launcher\n• You must own a <b>licensed</b> copy of Minecraft\n• Any form of piracy or cheating is prohibited\n• Mods/resource packs are used at your own risk\n• Not affiliated with Mojang/Microsoft\n\nContinued use constitutes agreement</string>
    <string name="eula_agree">Accept</string>
    <string name="eula_exit">Decline</string>
    <string name="allow_unknown_sources">Please allow installation from unknown sources before proceeding</string>
    <string name="dialog_title_delete_version">Delete Version</string>
    <string name="dialog_message_delete_version">Are you sure to delete this custom version? This action cannot be undone.</string>
    <string name="dialog_positive_delete">Delete</string>
    <string name="dialog_negative_cancel">Cancel</string>
    <string name="toast_delete_success">Deleted successfully</string>
    <string name="toast_delete_failed">Delete failed: %1$s</string>
    <string name="rename_version_title">Rename Version</string>
    <string name="rename_version_message">Enter a new name for this version:</string>
    <string name="new_version_name">New version name</string>
    <string name="rename">Rename</string>
    <string name="q1">What is the Minecraft Launcher?</string>
    <string name="a1">The Minecraft Launcher is the portal into the world of Minecraft. The Launcher can not only help you install and play Minecraft games, but you can also go to the Launcher to learn about important Minecraft news and events. Previously, only including Minecraft: Java Edition and Minecraft Dungeons, the Launcher now also includes Minecraft: Bedrock Edition, making this the next big step in the Launcher team’s quest to create a unified experience for all Minecraft players! Read more about the Launcher at https://aka.ms/NewMinecraftLauncherFAQ</string>
    <string name="q2">I\'m having trouble signing in to Minecraft: Bedrock Edition. What can I do?</string>
    <string name="a2">Go to aka.ms/SigninProblemsFAQ for information that might help you resolve this.</string>
    <string name="q3">What are the differences between Minecraft: Java Edition and Minecraft: Bedrock Edition?</string>
    <string name="a3">While every version of Minecraft is still Minecraft, the differences between Minecraft: Bedrock Edition and Minecraft: Java Edition can be quite extensive. For instance, Minecraft: Java Edition is PC only, whereas Minecraft: Bedrock Edition is multi-platform, being available on console, via mobile, and on PC. Go to https://aka.ms/JavaBedrockDifferences to find out more about the differences between the two games.</string>
    <string name="q4">How can I find out about what the most recent Minecraft for Windows update includes?</string>
    <string name="a4">You can check out https://aka.ms/MinecraftUpdate for detail on the most recent main release, and https://aka.ms/MinecraftBeta for detail on the most recent Beta release.</string>
    <string name="q5">Do I need to have the Minecraft Launcher installed to play Minecraft for Windows games? Do I have to go through the Minecraft Launcher to play Minecraft games?</string>
    <string name="a5">You do not need to have the Minecraft Launcher installed to play Minecraft for Windows; you can still open your game directly. The same is true for Minecraft Dungeons. However, if you want to play Minecraft: Java Edition, you will need to have the Minecraft Launcher installed to get into the game.</string>
    <string name="q6">Do I need to install the Minecraft Launcher to play Minecraft games on Xbox Game Pass for PC?</string>
    <string name="a6">You do need the Launcher installed if you want to play Minecraft: Java Edition through Xbox Game Pass for PC. However, while the Launcher is the easiest way to install and play the Minecraft for Windows and Minecraft Dungeons games, it is possible to launch these games directly after installing by going directly to their respective Microsoft Store pages. As such, the Minecraft Launcher is probably the easiest and most straightforward way to install and play all Minecraft games via a Game Pass for PC subscription.</string>
    <string name="q7">I didn’t receive an item that I purchased in the Marketplace. What should I do?</string>
    <string name="a7">Go to aka.ms/MarketplaceHelpFAQ for suggestions to help resolve this problem.</string>
    <string name="q8">I am having Multiplayer connection problems. What can I do?</string>
    <string name="a8">Go to aka.ms/ConnectionProblemsFAQ to find solutions to Multiplayer Connectivity problems. This includes not being able to join a friend’s world, not being able to communicate with friends, and a host of other potential issues.</string>
    <string name="q9">I’m having Realms Plus connection problems. What can I do to fix this?</string>
    <string name="a9">Go to aka.ms/RealmsPlusConnectionFAQ for information about how to address common Realms connection issues.</string>
    <string name="q10">I need to edit child account settings to fix a Realms connection issue. How do I do that?</string>
    <string name="a10">Go to aka.ms/ManageChildSettingsFAQ for information on how to edit these settings to help fix your problem.</string>
    <string name="faq_title">Frequently asked questions</string>
    <string name="faq_intro">Here are some frequently asked questions about Minecraft: Bedrock Edition and the Minecraft Launcher.</string>
</resources>